# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  embed_resources.py  engine-interface.txt  imgui.ini
Engines/: check_dx.bat
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
resources/: default_imgui_ini.ini
resources/shaders/: FragmentShader.glsl  VertexShader.glsl  vertex_shader.glsl
src/: ChessApplication.cpp  ChessApplication.h  Main.cpp  Resources.h
src/Application/: Application.cpp  Application.h  ChessPanel.cpp  EnginePanel.cpp  Main.cpp  Resources.h  SettingsPanel.cpp
src/Chess/: AlgebraicMove.cpp  BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  BoardFormat.h  ChessException.h  Engine.cpp  Engine.h  ExceptionTypes.h  Game.cpp  Game.h  KindergartenBitBoard.cpp  KindergartenBitBoard.h  Move.cpp  Move.h  Option.h  PseudoLegal.cpp  PseudoLegal.h  StringParser.h
src/ChessAnalysis/: Main.cpp
src/ChessEngine/: Engine.cpp  Engine.h  EngineException.h  Option.h
src/Engine/: Engine.cpp  Engine.h  EngineException.h
src/Graphics/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  DebugContext.cpp  DebugContext.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Platform/Unix/: UnixEngine.cpp  UnixEngine.h  UnixFileDialog.cpp
src/Platform/Windows/: WindowsEngine.cpp  WindowsEngine.h  WindowsFileDialog.cpp
src/Utility/: FileDialog.h  StringParser.h  Timer.h
tests/: CMakeLists.txt  board_test.cpp  engine_test.cpp  pgn_test.cpp
